test/types/tuple/errors/tuple-init.chpl
proc (2*int).init(x: int) {
  this = (3*x,4*x);
}
